--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="/assets/computer.jpg"
+                src="../Portfolio/assets/computer.jpg"
                 alt="Project 1"
                 class="project-img"
               />
