--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
     </section>
     <section id="projects">
       <p class="section__text__p1">Pesquisas</p>
-      <h1 class="title">Meus Proejtos</h1>
+      <h1 class="title">Meus Projetos</h1>
       <div class="experience-details-container">
         <div class="about-containers">
           <div class="details-container color-container">
@@ -343,7 +343,7 @@
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
-          <p><a href="mailto:examplemail@gmail.com">leolinkedin54@gmail.com</a></p>
+          <p><a href="mailto:leolinkedin54@gmail.com">leolinkedin54@gmail.com</a></p>
         </div>
         <div class="contact-info-container">
           <img
