update dark mode

--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
       <div class="section__text">
         <p class="section__text__p1">Olá, meu nome é</p>
         <h1 class="title">Leonardo Ribeiro</h1>
-        <p class="section__text__p2">Frontend Developer</p>
+        <p class="section__text__p2">Software Developer</p>
         <div class="btn-container">
           <button
-            class="btn btn-color-2"
+            class="btn btn-color-1"
             onclick="window.open('./assets/Curriculo.pdf')"
           >
             Curriculo
@@ -91,7 +91,7 @@
                 class="icon"
               />
               <h3>Experiência</h3>
-              <p>3+ anos <br />Analista de T.I</p>
+              <p>3+ anos <br />Analista de Suporte</p>
             </div>
             <div class="details-container">
               <img
@@ -105,7 +105,7 @@
           </div>
           <div class="text-container">
             <p>
-              Atualmente, atuo como analista de suporte ERP e estou no quinto
+              Atualmente, atuo como analista de suporte ERP e estou no ultimo
               semestre do curso de Segurança da Informação na FATEC de
               Americana. Minha jornada profissional e acadêmica é alimentada
               pela paixão por diversas áreas da tecnologia, abrangendo desde
@@ -255,7 +255,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="../Portfolio/assets/computer.jpg"
+                src="/assets/computer.jpg"
                 alt="Project 1"
                 class="project-img"
               />
@@ -273,7 +273,7 @@
 
             </div>
           </div>
-          <!-- 
+
           <div class="details-container color-container">
             <div class="article-container">
               <img
@@ -298,6 +298,7 @@
               </button>
             </div>
           </div>
+                    <!-- 
           <div class="details-container color-container">
             <div class="article-container">
               <img
